--- a/src/main/resources/templates/adminPages/admin-order-page.html
+++ b/src/main/resources/templates/adminPages/admin-order-page.html
@@ -26,6 +26,10 @@
                 <li><a th:href="@{/}">Hjem</a></li>
                 <li><a th:href="@{/about}">Om os</a></li>
                 <li th:if="${admin == true}"><a th:href="@{/adminIndex}">Admin</a></li>
+                <li th:if="${session.currentUser != null}"><a th:href="@{/profile-page}"
+                    th:text="${session.currentUser.email !=null ? session.currentUser.email : 'Profil'}"></a>
+                </li>
+                <li th:if="${session.currentUser != null}"><a th:href="@{/logout}">Logout</a></li>
             </ul>
         </nav>
 
