--- a/src/main/resources/templates/product-page.html
+++ b/src/main/resources/templates/product-page.html
@@ -26,6 +26,10 @@
             <ul>
                 <li><a th:href="@{/}">Hjem</a></li>
                 <li><a th:href="@{/about}">Om os</a></li>
+                <li th:if="${session.currentUser != null}"><a th:href="@{/profile-page}"
+                    th:text="${session.currentUser.email !=null ? session.currentUser.email : 'Profil'}"></a>
+                </li>
+                <li><a th:href="@{/logout}" th:if="${session.currentUser != null}">Logout</a></li>
             </ul>
         </nav>
 
