--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,6 +52,7 @@
 
                 <button type="submit">Log ind</button>
             </form>
+            <p th:if="${session.errorLogin != null}" th:text="${session.errorLogin}"></p>
             <p>Har du ikke en konto? <a th:href="@{/registerPassword}">Opret en her</a></p>
         </div>
     </section>
