when not logged in sent back to login with msg

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -67,8 +67,8 @@
         </div>
 
             <p>Leveringsdato: 20/11/2025</p>
-            <p>Leveringsadresse: Pederskervejen 17, 3730 Nexø</p>
-            <p>Leveringstidspunkt: 14:00 - 16:00</p>
+            <p>Fakturerings adresse: Pederskervejen 17, 3730 Nexø</p>
+            <p>Afhentningstidspunkt: 14:00 - 16:00</p>
 </div>
 <!--        <table>-->
 <!--                <tr th:each="cupcakeInOrder : ${cupcakeInOrders}">-->
@@ -83,11 +83,6 @@
 <!--                    <td class="cart_amount_quantity" th:value="${cupcakeInOrder.getAmount}"></td>-->
 <!--                </tr>-->
 <!--        </table>-->
-
-
-
-
-
     <!--        <div class="cart_items">-->
 <!--            <div class="cart_item">-->
 <!--                <div class="cart_item_details">-->
