when not logged in sent back to login with msg

--- a/src/main/resources/templates/adminPages/admin-order-page.html
+++ b/src/main/resources/templates/adminPages/admin-order-page.html
@@ -56,7 +56,7 @@
                     #<span th:text="${order.orderId}"></span> -
                     <span th:text=" ${order.date}"></span>
                     <span th:text="${order.appliedDiscount}"></span>
-                    <span> email: </span>
+                    <span> E-mail: </span>
                     <span th:text=" ${order.user.email } "></span>
                     <br/>
                     <span>  -  </span>
