--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -268,6 +268,10 @@ input:focus {
     outline: 2px solid #5B405F;
 }
 
+.amount_input_product_page input {
+    width: 100px;
+}
+
 button {
     width: 6rem;
     height: 40px;
