--- a/src/main/resources/templates/adminPages/admin-customer-page.html
+++ b/src/main/resources/templates/adminPages/admin-customer-page.html
@@ -47,19 +47,21 @@
         <div class="header_box">
             <h1 id="title_admin_page">VIS KUNDER</h1>
         </div>
-        <input class="search_input customer_search" type="text" placeholder="Søg Kunde"/>
+        <form class="search_input_form" th:action="@{/search_customer}" method="post">
+        <input class="search_input customer_search" type="text" name="search_text" placeholder="Søg Kunde"/>
+            <button type="submit">Søg</button>
+        </form>
 
         <div class="view_list">
-            <ul class="card_list list_rows">
-                <li th:each="user : ${session.all_users}">
-                name : <span th:text="${user.firstName}"></span>
-                    lastname : <span th:text="${user.lastName}"></span>
-                    email : <span th:text="${user.email}"></span>
-                    wallet : <span th:text="${user.wallet}"></span>
+            <ul class="card_list list_rows" >
+                <li th:each="user : ${session.users_in_search !=null ? session.users_in_search : session.all_users}">
+                Navn : <span th:text="${user.firstName}"></span>
+                    Efternavn : <span th:text="${user.lastName}"></span>
+                    E-mail : <span th:text="${user.email}"></span>
+                    Balance : <span th:text="${user.wallet}"></span>
                 </li>
             </ul>
         </div>
-
         <a th:href="@{/admin-order-page}">
         <button class="see_order_button">Vis Ordrer</button>
         </a>
