--- a/src/main/resources/templates/order-confirmation.html
+++ b/src/main/resources/templates/order-confirmation.html
@@ -48,7 +48,9 @@
 <main>
     <div class="order_confirmation">
         <p>Tak for at bestille hos os. Vi håber at høre fra dig igen.</p>
-        <button th:href="@{/}">Forside</button>
+        <a th:href="@{/}">
+        <button>Forside</button>
+        </a>
     </div>
 </main>
 
