Changes by shay

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,17 +53,18 @@
         <img th:src="@{/images/cupcake-hero.png}" alt="cupcake-hero" class="hero_image"/>
     </section>
 
+<!--        <section class="content">-->
+<!--           <div class="green_box"></div>-->
+<!--     <a th:href="@{about}">-->
+<!--        <img th:src="@{/images/about-us.png}" alt="Cupcake" class="cupcake_logo">-->
+<!--        </a>-->
+<!--        <p>-->
+<!--        </section>-->
 
-    <!--
-        <section class="content">
-           <div class="green_box"></div>
-     <a th:href="@{about}">
-        <img th:src="@{/images/about-us.png}" alt="Cupcake" class="cupcake_logo">
-        </a>
-        <p>
-    -->
     <section class="content">
-        <div class="green_box"></div>
+        <div class="green_box">
+
+        </div>
         <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
             propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
     </section>
