--- a/src/main/resources/templates/product-page.html
+++ b/src/main/resources/templates/product-page.html
@@ -47,7 +47,9 @@
 
     <form class="save_cupcake_form" th:action="@{/product-page}" method="POST">
     <section class="product_content">
-        <div class="green_box"></div>
+        <div class="green_box">
+            <img src="" id="bottomImage" alt="Bund" class="product_img" />
+        </div>
         <select class="dropdown_menu" name="bottom_id" required>
             <option disabled selected value>Vælg Bund</option>
             <option th:each="bottom : ${bottom_options}"
@@ -59,7 +61,9 @@
     </section>
 
     <section class="product_content">
-        <div class="green_box"></div>
+        <div class="green_box">
+            <img src="" id="icingImage" alt="Icing" class="product_img"/>
+        </div>
         <select class="dropdown_menu" name="icing_id" required>
             <option disabled selected value>Vælg Icing</option>
             <option th:each="icing : ${icing_options}" th:value="${icing.icingId}" th:text="${icing.icingName}">Ris</option>
