--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,8 +65,11 @@
         <div class="green_box">
 
         </div>
-        <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
-            propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
+        <p><strong> Smag vores cupcakes!</strong>
+            Bestil dem her! Vi har længe brugt det meste af vores dage på at perfektioner de mest fantastiske cupcakes.
+            De er friskbagte den dag du henter dem og matcher dine ønsker, vi har et udvalgt sortiment som du kan kigge igennem.
+            Du skal både vælge en bund og en topping og selvfølgelig hvor mange du vil have.
+            Ved bestilling af over 100 cupcakes bedes du kontakte os på mail direkte.  </p>
     </section>
 
     <section class="content">
@@ -75,10 +78,22 @@
             propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
     </section>
 
-    <section class="content">
-        <div class="green_box"></div>
-        <p>cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake
-            propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake propaganda cupcake </p>
+    <section class="content" th:action="@{/about}">
+        <div class="green_box index">
+        <a th:href="@{/about}" class="index_green_box">
+        <img th:src="@{/images/about-us.png}" alt="Om os" class="about_us_image">
+        </a>
+        </div>
+
+        <p><strong>Om os</strong>
+            Vi elsker cupcakes – og vi tror på, at alle fortjener lidt sødme i hverdagen! Vores mål er at skabe et sted,
+            hvor kreativitet og smag mødes, og hvor du kan slippe fantasien løs og designe dine egne unikke cupcakes.
+        <strong>Vores passion</strong>
+            Bag vores univers står et lille team af passionerede bagere og designelskere, der elsker at eksperimentere
+            med farver, former og smage. Vi arbejder hele tiden på at udvikle nye idéer, så du kan finde inspiration og skabe cupcakes, der både ser fantastiske ud og smager himmelsk.
+        <strong>Vores fællesskab</strong>
+            Vi tror på, at det er sjovere at dele glæden med andre. Derfor kan du hos os vise dine kreationer frem til venner, familie og andre cupcake-entusiaster.
+            Sammen fejrer vi kreativitet, hygge og alt det, der gør cupcakes til noget helt særligt.</p>
     </section>
 </main>
 
