Changes by shay

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -17,7 +17,9 @@
                       fill="#5B405F"/>
             </svg>
         </a>
+        <a th:href="@{/product-page}">
         <img th:src="@{/images/cupcakes-logo.png}" alt="Cupcake" class="cupcake_logo">
+        </a>
 
         <nav>
             <ul>
