--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -69,8 +69,9 @@ a svg:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem;
+    padding: 2rem 25rem 2rem 25rem;
     gap: 2rem;
+    flex-wrap: wrap;
 }
 
 .hero_text h2 {
@@ -113,7 +114,7 @@ a svg:hover {
     display: flex;
     align-items: center;
     gap: 32px;
-    padding: 48px 80px;
+    padding: 40px 400px;
 }
 
 .content:nth-child(odd) {
@@ -133,6 +134,9 @@ a svg:hover {
 /*}*/
 
 .green_box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 161px;
     height: 127px;
     background: #A3D9A5;
@@ -222,6 +226,9 @@ footer {
     gap: 16px;
 }
 
+form.login_form {
+    display: contents;
+}
 /*SAME AS INPUT-CONTAINER (FOR EDIT PAGE)*/
 .edit_container {
     position: relative;
@@ -479,8 +486,10 @@ button:hover {
     align-items: center;
     justify-content: center;
     min-height: 80vh;
-    padding: 32px 16px;
+    padding: 0;
     gap: 16px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 /* admin_section: padding: 7px 7px; Til media Query*/
@@ -513,9 +522,9 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 32px;
+    padding: 0;
     gap: 0;
-    width: 60%;
+    max-width: 100%;
 }
 
 .dashboard_row {
@@ -656,6 +665,18 @@ button:hover {
     justify-content: center;
     align-items: center;
     gap: 12px;
+    width: 50%;
+}
+
+form.gift_card_container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+input#amount, input#email_gift_card {
+    background-color: #F7B9B9;
+    margin-bottom: 12px;
 }
 
 .gift_card p {
@@ -852,4 +873,81 @@ button:hover {
 .image_cupcake_container:hover .overlay_buy_cupcake {
     filter: brightness(70%);
     transition: 1s ease;
+}
+
+/*INDEX IMAGES*/
+
+.index_green_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.green_box img {
+    display: flex;
+    flex: 100%;
+    max-width: 65%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+
+
+/*MEDIA QUERIES*/
+
+@media (max-width: 430px) {
+    .content {
+        padding: 40px 16px;
+    }
+    .hero {
+    justify-content: center;
+    }
+    .hero_image {
+        margin-left: unset;
+    }
+    .content:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
+}
+
+@media (max-width: 1500px) {
+    .content {
+        padding: 40px 100px;
+    }
+    .content:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
+}
+
+@media (max-width: 650px) {
+    .content {
+        padding: 40px 16px;
+    }
+    .content:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
+}
+
+@media (max-width: 450px) {
+    .content {
+        padding: 40px 16px;
+        flex-direction: column;
+    }
+    .content:nth-child(odd) {
+        flex-direction: column;
+    }
+    @media (max-width: 500px) {
+    }
+}
+
+@media (max-width: 1000px) {
+    .hero {
+        padding: 2rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .dashboard_grid {
+
+    }
 }
