--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -135,12 +135,12 @@
             <p><strong>Giv et Gavekort!</strong></p>
 
 
-            <form class="gift_card" th:action="@{/insertMoney}" method="POST">
+            <form class="gift_card_container" th:action="@{/insertMoney}" method="POST">
                 <label for="amount">amount:</label>
                 <input type="amount" id="amount" name="amount" value="200" required/>
 
-                <label for="email">email:</label>
-                <input type="email" id="email" name="email" value="ex@tv.dk" required/>
+                <label for="email_gift_card">email:</label>
+                <input type="email" id="email_gift_card" name="email" value="ex@tv.dk" required/>
                 <button class="send_gift">Send Gavekort</button>
             </form>
         </div>
