--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -50,7 +50,7 @@
             </span>
             <h2>Velkommen til!</h2>
 
-            <h2>Dagens ord er XXXX</h2>
+            <h2>Dagens ord er Cupcake!</h2>
         </div>
 
         <div class="dashboard_grid">
