--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -53,11 +53,11 @@
 
         <div class="cart_container">
             <div th:each="cupcakeInOrder : ${session.cupcakeInOrder}" class="cart_item">
-                 <span class="cart_item_name">Cupcake:<span th:text="${cupcakeInOrder.udc.bottom.bottomName}"></span></span><br/>
-                <span class="cart_item_price">Pris: <span th:text="${cupcakeInOrder.udc.bottom.bottomPrice}"></span></span><br/>
-                <span class="cart_item_name">Topping:<span th:text="${cupcakeInOrder.udc.icing.icingName}"></span></span><br/>
-                <span class="cart_item_price">Pris:<span th:text="${cupcakeInOrder.udc.icing.icingPrice}"></span></span><br/>
-                <span class="cart_amount_quantity">Antal: <span th:text="${cupcakeInOrder.amount}"></span></span>
+                 <span class="cart_item_name"> <span th:text="'Bund:  ' + ${cupcakeInOrder.udc.bottom.bottomName}"></span></span><br/>
+                <span class="cart_item_price"> <span th:text="'Pris:  ' + ${cupcakeInOrder.udc.bottom.bottomPrice}"></span></span><br/>
+                <span class="cart_item_name"> <span th:text="'Topping:  ' + ${cupcakeInOrder.udc.icing.icingName}"></span></span><br/>
+                <span class="cart_item_price"> <span th:text="'Pris:  ' + ${cupcakeInOrder.udc.icing.icingPrice}"></span></span><br/>
+                <span class="cart_amount_quantity"> <span th:text="'Antal:  ' + ${cupcakeInOrder.amount}"></span></span>
                 <form th:action="@{/delete_cupcake_in_current_order}" method="post" style="display:inline;">
                     <input type="hidden" name="cupcake_id" th:value="${cupcakeInOrder.udc.id}" />
                     <button type="submit" class="close-btn" title="X">&#10005;</button>
