--- a/src/main/resources/templates/pay-page.html
+++ b/src/main/resources/templates/pay-page.html
@@ -49,13 +49,13 @@
                 <label for="card_number">Kortnummer:</label>
                 <input type="text" id="card_number" name="card_number"  />
 
-                <label for="card_date">Dato:</label>
+                <label for="card_date">Udløbsdato:</label>
                 <input type="month" id="card_date" name="card_date" placeholder="MM/ÅÅ"  />
 
                 <label for="card_cvc">CVC:</label>
                 <input type="text" id="card_cvc" name="card_cvc"  />
 
-                <button type="submit">Bekræft</button>
+                <button type="submit" class="pay_button">Bekræft</button>
             </form>
         </div>
     </section>
