--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -342,16 +342,29 @@ button:hover {
     font-weight: 800;
 }
 
+.pay_form {
+    display: grid;
+    gap: 20px;
+}
+
+.pay_button {
+    margin-left: 36px;
+}
+
 /*CART SECTION*/
 .cart_container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: start;
-    /*justify-content: center;*/
-    /*min-height: 80vh;*/
-    padding: 48px 32px;
+    flex-wrap: wrap;
+    padding: 32px 32px;
     gap: 24px;
     margin-top: 20px;
+}
+
+.discount_form {
+    margin-bottom: 20px;
+    margin-left: 16px;
 }
 
 .cart_item_name {
@@ -380,7 +393,7 @@ button:hover {
 
 .cart_item {
     margin-top: 20px;
-    display: flex;
+    display: inline-grid;
     justify-content: space-between;
     align-items: center;
     background: #F7B9B9;
@@ -399,6 +412,8 @@ button:hover {
 
 .cart_item span {
     font-size: 16px;
+    display: flex;
+    justify-content: center;
 }
 
 .cart_container_right {
@@ -407,11 +422,12 @@ button:hover {
     justify-content: center;
     align-items: flex-start;
     margin-top: 2rem;
+    padding: 16px;
 }
 
 #cart_title {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: 3rem;
     font-size: 36px;
@@ -421,6 +437,10 @@ button:hover {
 
 /*BUTTONS SPECIFIC FOR cart.html*/
 .update_info_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
     text-align: center;
     text-decoration: none;
     align-content: center;
@@ -434,6 +454,8 @@ button:hover {
     font-size: 12px;
     cursor: pointer;
     transition: all 0.7s ease;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
 .update_info_button:hover {
@@ -517,6 +539,10 @@ button:hover {
     flex-direction: column;
 }
 
+.dashboard_numbers_admin {
+    font-weight: 800;
+    font-size: 2.5rem;
+}
 /*DASHBOARD GRID*/
 .dashboard_grid {
     display: flex;
