--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -57,7 +57,7 @@
 
             <div class="dashboard_row">
                 <div class="dashboard_card sales_today">
-                    <p>Dagens salgstal !  <span th:text="${today_sales}">0</span></p>
+                    <p>Dagens salgstal ! <br/> <span class="dashboard_numbers_admin" th:text="${today_sales}+' DKK'">0</span></p>
                 </div>
 
 
@@ -115,7 +115,7 @@
 
 
                 <div class="dashboard_card sales_period">
-                    <p><strong>Periodens</strong><br/>Salgstal <span th:text="${total_sales}"></span></p>
+                    <p><strong>Periodens</strong><br/>Salgstal <br/><span class="dashboard_numbers_admin" th:text="${total_sales} +' DKK'"></span></p>
                 </div>
             </div>
         </div>
