Changes by luke_

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
             Bestil dem her! Vi har længe brugt det meste af vores dage på at perfektioner de mest fantastiske cupcakes.
             De er friskbagte den dag du henter dem og matcher dine ønsker, vi har et udvalgt sortiment som du kan kigge igennem.
             Du skal både vælge en bund og en topping og selvfølgelig hvor mange du vil have.
-            Ved bestilling af over 100 cupcakes bedes du kontakte os på mail direkte.  </p>
+            Ved bestilling af over 100 cupcakes bedes du kontakte os på mail direkte.<a th:href="@{/product-page}"> Tryk her for at bestille</a>  </p> </p>
     </section>
 
     <section class="content">
@@ -51,7 +51,7 @@
             Gennemse det store udvalg og lad dig inspirere af de mange designs, smage og toppings, du kan vælge imellem.
             <strong>Skab din egen personlige cupcake!</strong>
             Slip fantasien løs og lav din helt unikke cupcake, der afspejler din personlighed. Vælg farver, pynt og smag,
-            og vis dit mesterværk frem til dine venner og familie – måske bliver du den næste cupcake-kreatør i vennekredsen!</p>
+            og vis dit mesterværk frem til dine venner og familie – måske bliver du den næste cupcake-kreatør i vennekredsen. <a th:href="@{/registerPassword}"> Tryk her for at oprette bruger</a></p></p>
     </section>
 
     <section class="content" th:action="@{/about}">
@@ -69,7 +69,7 @@
             med farver, former og smage. Vi arbejder hele tiden på at udvikle nye idéer, så du kan finde inspiration og skabe cupcakes, der både ser fantastiske ud og smager himmelsk.
         <strong>Vores fællesskab</strong>
             Vi tror på, at det er sjovere at dele glæden med andre. Derfor kan du hos os vise dine kreationer frem til venner, familie og andre cupcake-entusiaster.
-            Sammen fejrer vi kreativitet, hygge og alt det, der gør cupcakes til noget helt særligt.</p>
+            Sammen fejrer vi kreativitet, hygge og alt det, der gør cupcakes til noget helt særligt. <a th:href="@{/about}"> Tryk her for at læse mere om os</a></p></p>
     </section>
 </main>
 
