--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -151,6 +151,17 @@ a svg:hover {
     transform: scale(1.3);
 }
 
+.green_box_about{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 161px;
+    height: 127px;
+    background: #A3D9A5;
+    border-radius: 10px;
+    flex-shrink: 0;
+}
+
 .green_box_counter{
     display: flex;
     align-items: center;
