--- a/src/main/resources/templates/product-page.html
+++ b/src/main/resources/templates/product-page.html
@@ -87,7 +87,7 @@
         <section class="product_content-counter">
             <div class="green_box_counter">
                 <button class="counter_button" type="button" onclick="decreaseOne()">-</button>
-                <input type="number" max="100" id="counter_number" name="amount" value="1" required/>
+                <input type="number" min="1" max="100" id="counter_number" name="amount" value="1" required/>
                 <button class="counter_button"  type="button" onclick="increaseOne()">+</button>
             </div>
         </section>
