--- a/src/main/resources/templates/adminPages/admin-order-page.html
+++ b/src/main/resources/templates/adminPages/admin-order-page.html
@@ -41,16 +41,7 @@
         <a th:href="@{/admin-customer-page}">
             <button class="see_order_button">Vis Kunder</button>
         </a>
-
     </div>
 </main>
-
-<footer>
-    <p>
-        &copy; 2025 Icy Cupcakes <br/>
-        Bornholm Pederskervejen 17 ???? Nexø <br/>
-        Telefon: +45 18131123
-    </p>
-</footer>
+<footer th:replace="fragments :: footer"></footer>
 </body>
-</html>
