--- a/src/main/resources/templates/order-confirmation.html
+++ b/src/main/resources/templates/order-confirmation.html
@@ -54,10 +54,6 @@
     </div>
 </main>
 
-<footer>
-    <p>&copy; 2025 Icy Cupcakes <br/>
-        Bornholm Pederskervejen 17 ???? Nexø <br/>
-        Telefon: +45 18131123</p>
-</footer>
+<footer th:replace="fragments :: footer"></footer>
 </body>
 </html>
