--- a/src/main/resources/templates/adminPages/adminIndex.html
+++ b/src/main/resources/templates/adminPages/adminIndex.html
@@ -8,18 +8,14 @@
             <span th:text="${session.currentUser.firstName}"></span>
             </span>
             <h2>Velkommen til!</h2>
-
             <h2>Dagens ord er Cupcake!</h2>
         </div>
 
         <div class="dashboard_grid">
-
             <div class="dashboard_row">
                 <div class="dashboard_card sales_today">
                     <p>Dagens salgstal ! <br/> <span class="dashboard_numbers_admin" th:text="${today_sales}+' DKK'">0</span></p>
                 </div>
-
-
                 <div class="dashboard_card upcoming_orders">
                     <div class="card_header">Kommende Ordrer</div>
                     <ul class="card_list">
@@ -42,18 +38,6 @@
                         </li>
                     </ul>
                 </div>
-
-
-
-<!--                                <div class="dashboard_card upcoming_orders">-->
-<!--                    <div class="card_header">Kommende Ordrer</div>-->
-<!--                    <ul class="card_list">-->
-<!--                        <li>Ordre #1234 - 15/10/2025</li>-->
-<!--                        <li>Ordre #1235 - 16/10/2025</li>-->
-<!--                        <li>Ordre #1236 - 17/10/2025</li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-
 
             </div>
 
@@ -100,18 +84,11 @@
 
                 <label for="email_gift_card">email:</label>
                 <input type="email" id="email_gift_card" name="email" value="ex@tv.dk" required/>
+                <p th:if="${session.gift_card_message != null}" th:text="${session.gift_card_message}"></p>
                 <button class="send_gift">Send Gavekort</button>
             </form>
         </div>
     </section>
 </main>
-
-<footer>
-    <p>
-        &copy; 2025 Icy Cupcakes <br/>
-        Bornholm Pederskervejen 17 ???? Nexø <br/>
-        Telefon: +45 18131123
-    </p>
-</footer>
+<footer th:replace="fragments :: footer"></footer>
 </body>
-</html>
