--- a/src/main/resources/templates/registerPassword.html
+++ b/src/main/resources/templates/registerPassword.html
@@ -59,12 +59,6 @@
     </section>
 </main>
 
-<footer>
-    <p>
-        &copy; 2025 Icy Cupcakes <br />
-        Bornholm Pederskervejen 17 ???? Nexø <br />
-        Telefon: +45 18131123
-    </p>
-</footer>
+<footer th:replace="fragments :: footer"></footer>
 </body>
 </html>
